# LumoOmni_opensource

./: .dockerignore  .gitignore  Dockerfile  README.md  RUNBOOK.md  level2spec.md  mkdocs.yml  omnidesign.md  resources.md  stage1.1spec.md  stage1.md  stage1design.md  stage2.md  stage3.1spec.md  stage3.1verfiy.md  stage3.2data.md  stage3.2spec.md  stage3.2verify.md  stage3.3deliverable.md  stage3.3fastInteration.md  stage3.3spec.md  stage3.4feedback.md  stage3.4spec.md  stage3resource.md
docs/: checkpoints.md  citation.md  datasets.md  evaluation.md  (+8 more)
qwen3-vlm/: .gitignore  README.md  pyproject.toml  requirements.txt
qwen3-vlm/configs/: stage0_sanity.yaml  stage1_align.yaml  stage1_align_p11.yaml  stage1_align_p11_sweep.yaml  stage1_align_trial.yaml  stage2_sft_single_smoke.yaml  stage2_sft_single_trial.yaml
qwen3-vlm/scripts/: download_coco2017.sh  download_llava_instruct.sh  download_llava_pretrain.sh  download_mantis.sh  serve_stage2_trial.sh  train_stage0.sh  train_stage1.sh  train_stage1_p11.sh  train_stage1_p11_sweep.sh  train_stage1_trial.sh  train_stage2_sft_smoke.sh  train_stage2_sft_trial.sh
qwen3-vlm/src/qwen3_vlm/: __init__.py  eval_ablation.py
qwen3-vlm/src/qwen3_vlm/data/: __init__.py  collate.py  dummy.py  llava_instruct.py  llava_pretrain.py  splits.py
qwen3-vlm/src/qwen3_vlm/models/: llm_qwen3.py  projector.py  resampler.py  vision_siglip.py  vlm.py
qwen3-vlm/src/qwen3_vlm/serve/: webui.py
qwen3-vlm/src/qwen3_vlm/train/: stage0_sanity.py  train_utils.py
qwen3-vlm/src/qwen3_vlm/utils/: checkpointing.py  device.py  golden.py  seed.py
(+601 files in other folders)
