[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-vlm"
version = "0.1.0"
description = "Qwen3-based VLM with SigLIP, resampler, and projector"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
